# api_free_reseau_fr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: audit.yml  cd.yml  ci.yml
examples/: basic.rs  demo.rs
src/: client.rs  lib.rs  parser.rs  request.rs
